# comp-phys

./: .gitignore  .gitmodules
final/: animations.nb
project1/: CMakeLists.txt  Makefile  Plots.ipynb  README.md  res100.txt  res1000.txt  res100000.txt  solve.cpp
project1/include/: solver.h
project1/outputs/: res10.txt  res10000.txt
project1/outputs/solver_outputs/: arma10.txt  arma100.txt  arma1000.txt  res10.txt  res100.txt  res1000.txt  res10000.txt  res100000.txt
project1/outputs/timing/: arma_lu_times.csv  solver_times.csv
project1/report/: project1.tex
project1/src/: arma_lu.cpp  main.cpp  solver.cpp  test_solver.cpp  time_arma_lu.cpp  timing.cpp
project2/: CMakeLists.txt  README.md
project2/include/: jacobi.h
project2/outputs/: arma_eigval_lowest3.csv  arma_eigvec_lowest3.csv  eigval_2elec_om0.01.csv  eigval_2elec_om0.5.csv  eigval_2elec_om1.csv  eigval_2elec_om5.csv  eigval_lowest3.csv  eigvec_2elec_om0.01.csv  eigvec_2elec_om0.5.csv  eigvec_2elec_om1.csv  eigvec_2elec_om5.csv  eigvec_lowest3.csv  scaling_iters.csv  stdout.txt
project2/scripts/: README.md  arma_eigval.csv  arma_eigvec.csv  catsmallest.py  eigval.csv  eigvec.csv  find_num_transforms_behavior.sh  generate_outputs.sh  init_mat.csv  time_algs.sh
project2/src/: armaSolve.cpp  jacobi.c  main.c  test_jacobi_eig.c  timeOffdiag.cpp
project2/test/: test_jacobi.cpp
project2/writeup/: Plots.ipynb  project2.bib  project2.tex
project3/: CMakeLists.txt  Plots.ipynb
project3/configs/: all_planets.yml  earth_jupiter.yml  earth_sun.yml  escape.yml
project3/include/: Gravity.h  Integration.h  Particle.h  State.h  parser.h
project3/outputs/earth_jupiter/: Earth.csv  Jupiter.csv  Sun.csv
project3/outputs/earth_sun/: Earth.csv
project3/outputs/escape/: Earth.csv  Sun.csv
project3/src/: Gravity.cpp  Integration.cpp  Particle.cpp  config.yml  main.cpp  parser.cpp
project3/writeup/: Plots.ipynb  project2.tex  project3.bib  project3.tex
project4/: CMakeLists.txt  README.md
project4/include/: Cluster.h  Constants.h  Gravity.h  Particle.h
project4/src/: Cluster.cpp  Gravity.cpp  Integration.cpp  Particle.cpp  main.cpp
project4/writeup/: Plots.ipynb  project4.bib  project4.tex
warmup/: Makefile  Plots.ipynb  double_results.csv  float_results.csv  warmup.cpp
